     [servconf.c servconf.h sshd_config.5]
     Add ability to match groups to Match keyword in sshd_config.  Feedback
     djm@, stevesk@, ok stevesk@.
   - djm@cvs.openbsd.org 2006/08/16 11:47:15
     [sshd.c]
     factor inetd connection, TCP listen and main TCP accept loop out of
     main() into separate functions to improve readability; ok markus@

20060817
 - (dtucker) [openbsd-compat/fake-rfc2553.c openbsd-compat/setproctitle.c]
   Include stdlib.h for malloc and friends.
 - (dtucker) [configure.ac openbsd-compat/bsd-closefrom.c] Use F_CLOSEM fcntl
   for closefrom() on AIX.  Pointed out by William Ahern.
 - (dtucker) [openbsd-compat/regress/{Makefile.in,closefromtest.c}] Regress
   test for closefrom() in compat code.

20060816
 - (djm) [audit-bsm.c] Sprinkle in some headers

20060815
 - (dtucker) [LICENCE] Add Reyk to the list for the compat dir.

20060806
 - (djm) [openbsd-compat/bsd-getpeereid.c] Add some headers to quiet warnings
   on Solaris 10

20060806
 - (dtucker) [defines.h] With the includes.h changes we no longer get the
   name clash on "YES" so we can remove the workaround for it.
 - (dtucker) [openbsd-compat/{bsd-asprintf.c,bsd-openpty.c,bsd-snprintf.c,
   glob.c}] Include stdlib.h for malloc and friends in compat code.

20060805
 - (djm) OpenBSD CVS Sync
   - stevesk@cvs.openbsd.org 2006/07/24 13:58:22
     [sshconnect.c]
     disable tunnel forwarding when no strict host key checking
     and key changed; ok djm@ markus@ dtucker@
   - stevesk@cvs.openbsd.org 2006/07/25 02:01:34
     [scard.c]
     need #include <string.h>
   - stevesk@cvs.openbsd.org 2006/07/25 02:59:21
     [channels.c clientloop.c packet.c scp.c serverloop.c sftp-client.c]
     [sftp-server.c ssh-agent.c ssh-keyscan.c sshconnect.c sshd.c]
     move #include <sys/time.h> out of includes.h
   - stevesk@cvs.openbsd.org 2006/07/26 02:35:17
     [atomicio.c auth.c dh.c authfile.c buffer.c clientloop.c kex.c]